[package]
name = "pool-manager"
version = "0.1.0"
description = "A graphical desktop GUI for Cardano stake pool operators"
authors = ["GNP1-dev"]
license = "Apache-2.0"
repository = "https://github.com/GNP1-dev/PoolManager"
default-run = "pool-manager"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = [] }
ssh2 = "0.9"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
